# python3-hsp-tiny-parser

./: .gitignore  README.md  SYNTAX.md  _NOTE.md  hello.bat  hello.sh  pyproject.toml  run.bat  run.sh
inputs/: call.hsp  comment.hsp  fizzbuzz.hsp  hello.hsp  hsptmp  label.hsp  obj  op_comp.hsp  op_mul.hsp  op_sum.hsp
python3_hsp_tiny_parser/: __main__.py  parser.py  tokenizer.py
tests/: test_parser.py  test_python3_hsp_tiny_parser.py  test_tokenizer.py
