[tool.poetry]
name = "python3-hsp-tiny-parser"
version = "0.1.0"
description = ""
authors = ["s_hiiragi <hiiragi.lab@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
